--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "http": "0.0.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
